@@ -23,6 +23,13 @@ PyKota NEWS :
 
     - 1.19alpha10 :
     
+        - 25% Speedup in PCL parser. Getting more of the Python version
+          will probably be difficult, since the completely table driven 
+          parser I wrote is slower than the original algorithm. Then,
+          the original algorithm is still used for now.
+          Probable that more speed could be achieved using mmap, at the
+          expense of severe memory consumption.
+        
         - configuration simplifications : the "accounter" directive's
           'hardware' arguments now accepts what was in the "requester"
           directive as it's content. The "requester" directive is not
